2000-02-19  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf/pixops/pixops.c (scale_pixel): Fix error in
	scale factors for non-alpha case.

2000-02-14  Mark Crichton  <crichton@gimp.org>

	* gdk-pixbuf/io-xpm.c (xpm_extract_color): Added check for "g" color type.
	Imlib/libXpm handle this, but we didn't.

2000-02-14  Darin Adler  <darin@eazel.com>

	* gdk-pixbuf/testpixbuf.c: Remove now-unnecessary cast.
	* .cvsignore: gdk-pixbuf/.cvsignore: More to ignore.

2000-02-14  Elliot Lee  <sopwith@redhat.com>
	* gdk-pixbuf/gdk-pixbuf.h, gdk-pixbuf/gdk-pixbuf-data.c: Make passed-in argument 'const'.

2000-02-04  Michael Meeks  <mmeeks@gnu.org>

	* gdk-pixbuf/io-gif.c (struct _GifContext): add x,y_offset.
	(gif_get_frame_info): put the offsets on the context.
	(gif_get_lzw): copy them off into the frame.
	(new_context): no change required; will 0 offsets by default.

2000-01-28  Michael Meeks  <michael@mejm2.dow.cam.ac.uk>

	* gdk-pixbuf/pixops/pixops.c (pixops_process): const + nasty
	un-consting cast.

	* gdk-pixbuf/pixops/pixops.h: const.

	* gdk-pixbuf/gdk-pixbuf-util.c: const.
	
	* gdk-pixbuf/gdk-pixbuf-scale.c: const.

	* gdk-pixbuf/gdk-pixbuf.h: constify lots of things.

2000-02-03  Federico Mena Quintero  <federico@helixcode.com>

	* gdk-pixbuf/gdk-pixbuf-render.c
	(gdk_pixbuf_render_threshold_alpha): Added sanity check for width
	and height being >= 0.  Also, do nothing if either of them is
	zero.  Thanks to Ettore for pointing this out.
	(gdk_pixbuf_render_to_drawable): Likewise.
	(gdk_pixbuf_render_to_drawable_alpha): Likewise.

2000-02-02  Federico Mena Quintero  <federico@helixcode.com>

	* gdk-pixbuf/io-gif.c (gif_get_lzw): Removed debugging g_print.
	Thanks to John Sullivan <sullivan@eazel.com> for the patch.

	* gdk-pixbuf/testpixbuf-drawable.c (configure_cb): Get a new area
	of the screen when the window is resized.  Thanks to David
	N. Welton <davidw@linuxcare.com> for pointing this out.
	Misc. cleanups to the rest of the file.
