@@ -1,3 +1,8 @@
+2000-02-19  Jonathan Blandford  <jrb@redhat.com>
+
+	* gdk-pixbuf/io-gif.c (new_context): fix case where initial
+	colormap entry is Transparent.
+
 2000-02-19  Owen Taylor  <otaylor@redhat.com>
 
 	* gdk-pixbuf/pixops/pixops.c (scale_pixel): Fix error in
